--- a/src/Student-Information-Management-System_cpp/Student-Information-Management-System_cpp.vcxproj
+++ b/src/Student-Information-Management-System_cpp/Student-Information-Management-System_cpp.vcxproj
@@ -132,6 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ManageSystem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ManageSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
